add new compoent

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -38,3 +38,11 @@
   animation-name: fade-in;
   opacity: 1;
 }
+
+
+.animate {
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-duration: .3s;
+  transition-property: all;
+
+}
